Write VPZ and CPP files to a project folder
Generated CPP files are just a copy of Simple.cpp. For now, there is no modification.

--- a/xmi2vle.1
+++ b/xmi2vle.1
@@ -7,7 +7,7 @@ xmi2vle \- read XMI file(s), convert them to VPZ usable by VLE and generate init
 
 .SH SYNOPSIS
 .B xmi2vle
-[\fISOURCE_FILE\fR] [\fIDESTINATION_FILE\fR]
+[\fISOURCE_FILE\fR] [\fIPROJECT_DIRECTORY\fR]
 
 .SH DESCRIPTION
 .B xmi2vle
